Realigned output text middle

--- a/frontend/react-app/src/components/SearchBar.css
+++ b/frontend/react-app/src/components/SearchBar.css
@@ -1,14 +1,31 @@
-.container {
-    margin: 0;
-    height: 60px;
-    margin-bottom: 3vh;
+.largeContainer {
+    background-color: #F2F2F2;
+    margin-right: 3vh;
+    border-radius: 10px;
+    font-family: 'Open Sans';
+    font-size: 16px;
+    padding-bottom: 2vh;
+    padding-top: 1vh;
+    margin-top: 2vh
 }
 
+.container {
+    width: 80%;
+    margin-left: 0;
+    height: 60px;
+    margin-bottom: 4vh;
+    margin-top: 2vh;
+}
+
+.prediction {
+    font-size: 22px;
+}
 
 .child-left {
     display: inline-block;
-    vertical-align: middle;
     min-width: 20%;
+    padding-left: 5px;
+    padding-right: 3vh;
 }
 
 .divider {
@@ -23,8 +40,18 @@
 .child-right {
     display: inline-block;
     vertical-align: middle;
-    padding: 0rem 4rem;
-    width: 75%;
+    padding-left: 3vh;
+    width: 70%;
 }
 
+.spacer {
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
 
+.container2 {
+    width: 95%;
+    margin-left: 0;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+}
